# ai_empursh

./: .gitignore  CLAUDE.md  README.md  start-backend.bat
backend/: config.py  config.yaml  config.yaml.example  main.py  mcp_servers.yaml  pyproject.toml  requirements.txt  sync.bat
backend/agent/: chat.py  personality.py  personality_manager.py  skills.py
backend/assets/voice/: README.txt
backend/db/: conversations.py  init_db.py  notes.py  personalities.py  public_notes.py  secret_notes.py  workspace_sync.py
backend/mcp/: __init__.py  adapter.py  errors.py  http_client.py  protocol.py  provider.py  stdio_client.py
backend/parsers/: markdown_parser.py
backend/personalities/: anis-01-simple.yaml  anis-02-full.yaml  anis-03-arc.yaml  custom.yaml.example  cute-girl.yaml  default.yaml  professional.yaml
backend/prompt/: __init__.py  context.py  pipeline.py
backend/prompt/segments/: __init__.py  compact.py  emotion.py  personality.py  time_info.py
backend/routers/: __init__.py  config.py  conversations.py  notes.py  personalities.py
backend/security/: guard.py
backend/services/: __init__.py  conversation_service.py
backend/skills/: material_organizer.md
backend/tests/: conftest.py  mcp_echo_server.py  mcp_integration_manual.py  test_chat.py  test_conversation_service.py  test_guard.py  test_integration_ws.py  test_markdown.py  test_markdown_parser.py  test_mcp.py  test_personality_manager.py  test_prompt_pipeline.py  test_public_notes.py  test_routers_conversations.py  test_routers_notes.py  test_routers_personalities.py  test_secret_notes.py  test_time_tools.py  test_tool_registry.py
backend/tools/: __init__.py  base.py  dispatcher.py  notes.py  provider.py  time_tools.py
backend/utils/: __init__.py  markdown.py  template.py
backend/voice/: extension.py  stt.py  tts.py  tts_base.py  tts_edge.py  tts_f5.py  tts_xtts.py
doc/: AI桌面拟人助理 - 项目需求规格说明书.md  MCP能力增强.md  助理人格增强.md  桌宠能力增强.md  笔记能力增强.md
docs/: TESTING.md  live2d-motion-format.md
docs/superpowers/plans/: 2026-06-03-phase1-implementation-plan.md  2026-06-05-markdown-rendering.md  2026-06-06-tool-calling-implementation.md  2026-06-06-tts-markdown-stripping.md  2026-06-21-spine-model-migration.md  2026-06-22-personality-enhancement-implementation.md  2026-06-23-ui-redesign-plan.md  2026-06-24-refactoring-analysis.md
docs/superpowers/specs/: 2026-06-03-phase1-desktop-ai-companion-design.md  2026-06-04-phase2-notes-system-design.md  2026-06-04-phase3-voice-interaction-design.md  2026-06-04-phase4-skills-system-design.md  2026-06-05-markdown-rendering-design.md  2026-06-05-phase5-live2d-avatar-design.md  2026-06-05-phase5b-desktop-pet.md  2026-06-05-tts-markdown-stripping-design.md  2026-06-05-tts-streaming-design.md  2026-06-06-tool-calling-system-design.md  2026-06-07-tts-personality-wakeword-design.md  2026-06-21-mcp-enhancement-design.md  2026-06-21-spine-model-migration-design.md  2026-06-22-bugfix-notes.md  2026-06-22-personality-enhancement-design.md  2026-06-23-ui-redesign-design.md
electron-app/: forge.config.js  index.html  package-lock.json  package.json  vite.renderer.config.mjs  vitest.config.mjs
electron-app/src/: main.js  preload.js
electron-app/src/avatar/: AnimationController.ts  AvatarManager.ts  IAvatarModel.ts  InteractionHandler.ts  PixiApp.ts  SpineModel.ts  types.ts
electron-app/src/live2d/: Live2DManager.ts  Model.ts
electron-app/src/live2d/app/: lappdefine.ts  lappdelegate.ts
electron-app/src/live2d/demo/: lappdefine.ts  lappdelegate.ts
electron-app/src/renderer/: App.css  App.jsx  config.js  main.jsx
(+39 files in other folders)
