[project]
name = "ai-empursh-backend"
version = "0.1.0"
description = "AI Desktop Companion — FastAPI backend"
requires-python = ">=3.10"
# Note: tts-xtts extra requires Python >= 3.12 for pre-built wheels
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "openai>=1.30.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Speech-to-text (faster-whisper + VAD)
stt = [
    "faster-whisper>=1.0.0",
]

# TTS — Microsoft Edge cloud (lightweight, no GPU)
tts-edge = [
    "edge-tts>=7.0.0",
]

# TTS — XTTS-v2 local voice cloning
# coqui-tts provides the XTTS model (imported as 'TTS').
# Much lighter than xtts-api-server which pulls in all language packs.
tts-xtts = [
    "coqui-tts[torch]>=0.24.0",
]

# Full install (everything)
full = [
    "faster-whisper>=1.0.0",
    "edge-tts>=7.0.0",
    "coqui-tts[torch]>=0.24.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
